--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,26 +6,27 @@
 
     <title>FriendFinder</title>
     <!-- Latest compiled and minified CSS & JS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
     <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     ></script>
     <!-- Font Awesome Glyphicons -->
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
@@ -174,7 +175,7 @@
         <div class="container">
           <p>
             <a href="#">About Dave Cox</a> |
-            <a href="https://github.com/Dcoxmen/friend-finder">GitHub Repo</a>
+            <a href="https://github.com/Padraig22/friend-finder">GitHub Repo</a>
             <br />
           </p>
         </div>
@@ -220,7 +221,7 @@
           return isValid;
         }
         if (validateForm() == true) {
-          var userData = {
+          const userData = {
             name: $("#name").val(),
             photo: $("#photo").val(),
             scores: [
@@ -236,7 +237,7 @@
               $("#q10").val()
             ]
           };
-          var currentURL = window.location.origin;
+          const currentURL = window.location.origin;
           $.post(currentURL + "/api/friends", userData, function(data) {
             $("#matchName").text(data.name);
             $("#matchImg").attr("src", data.photo);
